--- a/html/style.css
+++ b/html/style.css
@@ -1,113 +1,21 @@
 @import url(http://fonts.googleapis.com/css?family=Inconsolata);
 
 body {
-   font-family: Inconsolata, Verdana, sans-serif;
-   font-size: 12pt;
-   color: #111;
-}
-
-h1, h2, h3 {
-   font-family: Inconsolata, sans-serif;
-   font-weight: normal;
-   letter-spacing: .05em;
-   color: #333;
-   border-bottom: 2px solid #c7dce1;
+    width: 900px;
+    font-family: Inconsolata, Verdana, sans-serif;
+    font-size: 12pt;
 }
 
 h1 {
-  font-size: 2.em;
-}
-
-h2 {
-  font-size: 2em;
-}
-
-h2:first-letter {
-   font-weight: bold;
-}
-
-a {
-   color: #05596b;
-   text-decoration: none;
-}
-
-a:hover {
-   text-decoration: underline;
+    font-size: 2.em;
+    font-weight: bold;
+    letter-spacing: .05em;
+    margin: 0 auto 0.4em;
 }
 
 ul {
-   list-style: none;
-   -webkit-column-count: 2;
-   -moz-column-count: 2;
-}
-
-dl {
-   margin-bottom: 3em;
-}
-
-dd, dt {
-   display: inline-block;
-   margin: 0; padding: 0;
-}
-
-dt {
-   width: 10em;
-   font-weight: bold;
-   vertical-align: top;
-   text-align: right;
-   margin-right: 1em;
-}
-
-#doc {
-   margin: 5em auto 5em auto;
-   width: 720px;
-   background: #FFF;
-   padding: 1em 4em 5em 4em;
-}
-
-#hd {
-   margin-bottom: 5em;
-}
-
-.code {
- font-weight: bold;
- text-align: left;
- margin-bottom: 0;
- border: none;
-}
-
-.until {
-    font-size: 0.8em;
-}
-
-#profession {
- margin-top: 0;
- text-transform: lowercase;
- font-weight: lighter;
- text-align: left;
- border: none;
-}
-
-#profession:first-letter {
- font-weight: inherit;
-}
-
-#picture {
-   position: absolute;
-   margin-top: -160px;
-   margin-left: 580px;
-   text-align: center;
-}
-
-#picture img {
-   display: block;
-
-   -moz-box-shadow: 0px 0px 5px #333;
-   -webkit-box-shadow: 1px 1px 1px #555;
-   box-shadow: 1px 1px 1px #555;
-}
-
-#vcard {
-   display: inline-block;
-   margin-top: 1em;
+    list-style: none;
+    column-count: 5;
+    -webkit-column-count: 5;
+    -moz-column-count: 5;
 }
